--- a/blog/templates/registration/password_change_form.html
+++ b/blog/templates/registration/password_change_form.html
@@ -5,6 +5,7 @@
 {% block content %}
     <div class="container mt-5">
         <h1 class="text-center mb-4">Изменение пароля</h1>
+        <p>(только для пользователей, зарегестрированных через наш сайт)</p>
         <div class="card">
             <div class="card-body">
                 <p class="card-text">Введите свой старый пароль, а затем введите новый пароль дважды, чтобы мы могли убедиться, что он введён верно.</p>
